--- a/First py project.ipynb
+++ b/First py project.ipynb
@@ -168,10 +168,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LR: 0.941667 (0.065085)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "e:\\python 3.8\\lib\\site-packages\\sklearn\\model_selection\\_validation.py:548: FitFailedWarning: Estimator fit failed. The score on this train-test partition for these parameters will be set to nan. Details: \n",
+      "Traceback (most recent call last):\n",
+      "  File \"e:\\python 3.8\\lib\\site-packages\\sklearn\\model_selection\\_validation.py\", line 531, in _fit_and_score\n",
+      "    estimator.fit(X_train, y_train, **fit_params)\n",
+      "  File \"e:\\python 3.8\\lib\\site-packages\\sklearn\\discriminant_analysis.py\", line 464, in fit\n",
+      "    self._solve_svd(X, y)\n",
+      "  File \"e:\\python 3.8\\lib\\site-packages\\sklearn\\discriminant_analysis.py\", line 381, in _solve_svd\n",
+      "    U, S, V = linalg.svd(X, full_matrices=False)\n",
+      "  File \"e:\\python 3.8\\lib\\site-packages\\scipy\\linalg\\decomp_svd.py\", line 132, in svd\n",
+      "    raise LinAlgError(\"SVD did not converge\")\n",
+      "numpy.linalg.LinAlgError: SVD did not converge\n",
+      "\n",
+      "  warnings.warn(\"Estimator fit failed. The score on this train-test\"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LDA: nan (nan)\n",
+      "KNN: 0.958333 (0.041667)\n",
+      "CART: 0.958333 (0.041667)\n",
+      "NB: 0.950000 (0.055277)\n",
+      "SVM: 0.983333 (0.033333)\n"
+     ]
+    }
+   ],
+   "source": [
+    "models=[]\n",
+    "models.append(('LR', LogisticRegression(solver='liblinear', multi_class='ovr')))\n",
+    "models.append(('LDA', LinearDiscriminantAnalysis()))\n",
+    "models.append(('KNN', KNeighborsClassifier()))\n",
+    "models.append(('CART', DecisionTreeClassifier()))\n",
+    "models.append(('NB', GaussianNB()))\n",
+    "models.append(('SVM', SVC(gamma='auto')))\n",
+    "results=[]\n",
+    "names=[]\n",
+    "for name, model in models:\n",
+    "    kfold = StratifiedKFold(n_splits=10, random_state=1, shuffle=True)\n",
+    "    cv_results=cross_val_score(model, X_train, Y_train, cv=kfold, scoring='accuracy')\n",
+    "    results.append(cv_results)\n",
+    "    names.append(name)\n",
+    "    print('%s: %f (%f)'%(name, cv_results.mean(), cv_results.std()))"
+   ]
   }
  ],
  "metadata": {
